<resources>
    <string name="app_name">WakreAdmin</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have account</string>
    <string name="singup_now">SignUp Now</string>
    <string name="select_type">Select Type</string>
    <string name="merchant">Merchant</string>
    <string name="customer">Customer</string>
    <string name="next">Next</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="verification">Verification</string>
    <string name="verification_text">Enter the otp code below that we have sent to your phone.</string>
    <string name="verify">Verify</string>
    <string name="loading">Please wait...</string>

    <string name="rest_password">Reset Password</string>
    <string name="reset_message">Don\'t worry, Enter your email below and we will send you password reset instructions on your email address.</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Amount:</string>
    <string name="id">ID#</string>
    <string name="shop_name">Shop Name:</string>
    <string name="owner_name">Owner Name:</string>
    <string name="shop_address">Shop Address</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="search">Search by phone</string>
    <string name="earns">Total Earns(Tax)</string>
    <string name="transaction">Transaction</string>
    <string name="customer_info">Customer Information</string>
    <string name="transaction_info">Transaction Information</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="date">Others Information</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="phone">Phone</string>
    <string name="tax">Tax</string>
    <string name="receiver_info">Receiver Information</string>
    <string name="sender_info">Sender Information</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_type">Account Type</string>
    <string name="account_state">Account State</string>
    <string name="add_amount">Add Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="user_amount">User Amount</string>
    <string name="update_state">Update State</string>
    <string name="logout">Logout</string>
    <string name="available">Available</string>
    <string name="spends">Spends</string>
    <string name="deposits">Deposits</string>
    <string name="taxs">Tax\'s</string>

</resources>