<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@color/colorWhiteBG">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:orientation="vertical"
            android:background="@drawable/shape_wave">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">
            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_12sdp"
                android:src="@drawable/ic_arrow_back"
                android:padding="@dimen/_4sdp"
                android:background="?selectableItemBackground"
                app:tint="@color/colorWhite" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/colorWhite"
                android:text="@string/transaction"/>
        </RelativeLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
             android:textColor="@color/colorWhite"
             android:fontFamily="@font/montserrat_medium"
             android:layout_gravity="center_horizontal"
             android:textSize="@dimen/_12ssp"
             android:text="@string/tax"/>
            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_36sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="3$"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/colorGold"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/montserrat_medium"
                android:text="Total Amount: 15$"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:paddingTop="@dimen/_5sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/colorGreyDark"
            android:textSize="@dimen/_10ssp"
            android:text="@string/customer_info"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/tvCustomerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGreyDark"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/_12ssp"
                    android:layout_alignParentRight="true"
                    android:text="Waleed"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/phone"/>
                <TextView
                    android:id="@+id/tvCustomerPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGreyDark"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/_12ssp"
                    android:layout_alignParentRight="true"
                    android:text="+92 302 6753695"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:backgroundTint="@color/colorGrey"
                android:background="@drawable/dot_line"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/colorGreyDark"
                android:text="@string/transaction_info"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/transaction_id"/>
                <TextView
                    android:id="@+id/tvId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGreyDark"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/_12ssp"
                    android:layout_alignParentRight="true"
                    android:text="12J56D9Cb67"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/transaction_type"/>
                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGreyDark"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/_12ssp"
                    android:layout_alignParentRight="true"
                    android:text="SCAN QR"

                    android:drawablePadding="@dimen/_5sdp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/transaction_status"/>
                <TextView
                    android:id="@+id/tvState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGreyDark"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/_12ssp"
                    android:layout_alignParentRight="true"
                    android:text="Processed"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:backgroundTint="@color/colorGrey"
                android:background="@drawable/dot_line"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/colorGreyDark"
                android:text="@string/date"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/transaction_date"/>

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="12 July 2021"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/tax"/>
                <TextView
                    android:id="@+id/tvTax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGreyDark"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/_12ssp"
                    android:layout_alignParentRight="true"
                    android:text="2%(4$)"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>