<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".fragments.auth.ResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/shape_wave" />

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_12sdp"
                android:background="?actionBarItemBackground"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/rest_password"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">
            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/img_forgot_pass"/>
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/colorGreyDark"
                android:text="@string/reset_message"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:backgroundTint="@color/colorBlue"
                android:fontFamily="@font/montserrat_bold"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:cornerRadius="@dimen/_6sdp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>