<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/colorGrey" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@color/colorGreyLight" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/shop_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="Al-Hamra shop"
                    android:textColor="@color/colorGold"
                    android:textSize="@dimen/_18ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="03037902706" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:background="@color/colorGreyLight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/owner_name"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="M.Aslam" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/shop_address"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/_10ssp"
                android:text="22-A link road street no 4 m2 lahore" />
        </LinearLayout>
     <com.google.android.material.button.MaterialButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_12sdp"
         android:textColor="@color/colorWhite"
         android:fontFamily="@font/montserrat_medium"
         android:text="@string/approve"
         android:textAllCaps="false"
         android:backgroundTint="@color/colorGreen"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/reject"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorRed"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>