<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhiteBG"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".fragments.auth.LoginFragment">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:layout_marginTop="-130dp"
                android:scaleType="fitXY"
                android:src="@drawable/shape_wave" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputEmail"
                    style="@style/TextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionGo"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputPassword"
                    style="@style/TextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@color/colorBlue"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingTop="@dimen/_12sdp"
                    android:paddingBottom="@dimen/_12sdp"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    app:cornerRadius="@dimen/_6sdp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>