<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_12sdp"
            app:cardCornerRadius="@dimen/_2sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@drawable/shape_wave">

                    <ImageButton
                        android:id="@+id/btnBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:background="?actionBarItemBackground"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/ic_arrow_back"
                        app:tint="@color/colorWhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/add_amount"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_14ssp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_12sdp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputAmount"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_amount"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/linButtons"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_16sdp"
                            android:layout_marginBottom="@dimen/_8sdp"
                            android:orientation="horizontal">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnCancel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/_22ssp"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/cancel"
                                android:textAllCaps="false"
                                android:textColor="@color/colorWhite"
                                app:backgroundTint="@color/colorRed" />

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnDone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_22sdp"
                                android:fontFamily="@font/roboto_regular"
                                android:text="@string/done"
                                android:textAllCaps="false"
                                android:textColor="@color/colorWhite" />
                        </LinearLayout>

                        <ProgressBar
                            android:id="@+id/pbLoading"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_centerInParent="true"
                            android:visibility="invisible" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>